--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://rishukr01:boomboom@cluster0.ir7hksz.mongodb.net/test"
-NEXTAUTH_SECRET=
-GITHUB_ID=
-GITHUB_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+NEXTAUTH_SECRET=834010dac474e0cec4396d25cfe7ae63
+GITHUB_ID=ff01343376653ef29ffb
+GITHUB_SECRET=bfc7326610cc8bb0ba3a5140a360030ef4dcfcf3
+GOOGLE_CLIENT_ID=324329382810-27isknhhhooc43enuabmvb1u97f611nh.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
