--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ GITHUB_ID=ff01343376653ef29ffb
 GITHUB_SECRET=bfc7326610cc8bb0ba3a5140a360030ef4dcfcf3
 GOOGLE_CLIENT_ID=324329382810-27isknhhhooc43enuabmvb1u97f611nh.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dzoifjf1o
+
