--- a/.env
+++ b/.env
@@ -11,4 +11,7 @@ GITHUB_SECRET=bfc7326610cc8bb0ba3a5140a360030ef4dcfcf3
 GOOGLE_CLIENT_ID=324329382810-27isknhhhooc43enuabmvb1u97f611nh.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dzoifjf1o
+NEXT_PUBLIC_PUSHER_APP_KEY=35ce2537bb7d1b77eeb7
+PUSHER_APP_ID=1601586
+PUSHER_SECRET=e8c12070e2b2b6afdd0f
 
